--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,43 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Blank
+      Catálogo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-slides>
+    <ion-slide >
+      <ion-card>
+        <img src='https://picsum.photos/200/300'>
+        <ion-card-header>
+          <ion-card-title>Perro</ion-card-title>
+          <ion-card-subtitle>Descripción del perro</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <div>
+            <div>
+              <ion-chip color="danger">
+                <ion-label>$100.00</ion-label>
+              </ion-chip>
+            </div>
+          </div>
+          <ion-fab vertical="top" horizontal="end" slot="fixed">
+            <ion-fab-button>
+              <ion-icon name="add"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-list side="top">
+              <ion-fab-button color="secondary"  >
+                <ion-icon name="cart"></ion-icon>
+              </ion-fab-button>
+            </ion-fab-list>
+          </ion-fab>
+        </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
