--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,19 +10,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-slides>
-    <ion-slide >
+  <ion-slides *ngIf="products.length">
+    <ion-slide *ngFor="let product of products; index as i">
       <ion-card>
-        <img src='https://picsum.photos/200/300'>
+        <img src='{{ product.photo }}'>
         <ion-card-header>
-          <ion-card-title>Perro</ion-card-title>
-          <ion-card-subtitle>Descripción del perro</ion-card-subtitle>
+          <ion-card-title>{{ product.name }}</ion-card-title>
+          <ion-card-subtitle>{{ product.description }}</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
           <div>
             <div>
-              <ion-chip color="danger">
-                <ion-label>$100.00</ion-label>
+              <ion-chip color="primary">
+                <ion-label>{{ product.price | currency}}</ion-label>
               </ion-chip>
             </div>
           </div>
