--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,7 +31,7 @@
               <ion-icon name="add"></ion-icon>
             </ion-fab-button>
             <ion-fab-list side="top">
-              <ion-fab-button color="secondary"  >
+              <ion-fab-button color="secondary"  (click)="addToCart(product)">
                 <ion-icon name="cart"></ion-icon>
               </ion-fab-button>
             </ion-fab-list>
